add api for jira field
